# pirate2d

./: .gitignore  CMakeLists.txt  README.md
include/: log.h  res_path.h
pirate-client/: CMakeLists.txt
pirate-client/src/: base.h  entity.h  main.cpp  physics.h  rect.h~  render.h  state.h  vector.h~  vectors.h
src/: CMakeLists.txt
src/include/: cleanup.h
src/pirate-client/: action.h  ai.h  main.cpp  physics.h  rect.h  render.h
src/pirate-client/factories/: entityFactory.cpp  entityFactory.h
